--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,12 +7,11 @@
   --button-secondary-hover: #f2f2f2;
 
   display: grid;
-  grid-template-rows: 20px 1fr 20px;
-  align-items: center;
+  grid-template-rows: auto 1fr auto;
   justify-items: center;
   min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
+  padding: clamp(0.5rem, 3vw, 1rem);
+  gap: clamp(1rem, 3vw, 1.5rem);
   font-family: var(--font-geist-sans);
 }
 
@@ -125,12 +124,12 @@ a.secondary {
 
 @media (max-width: 600px) {
   .page {
-    padding: 32px;
-    padding-bottom: 80px;
+    padding: 0.5rem;
+    gap: 0.75rem;
   }
 
   .main {
-    align-items: center;
+    gap: 1rem;
   }
 
   .main ol {
